@@ -1,25 +1,22 @@
 import groovy.text.SimpleTemplateEngine
+import org.apache.tools.ant.taskdefs.condition.Os
 
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6"
-    }
+plugins {
+    id 'groovy'
+    id 'application'
+    id 'maven'
+    id 'org.javamodularity.moduleplugin' version '1.6.0'
+    id "com.jfrog.bintray" version "1.8.4"
 }
 
 group 'com.athaydes.logfx'
-version '1.0-RC3'
+version '1.0-RC10'
+description 'A beautiful log viewer capable of handling large files'
 
-apply plugin: 'groovy'
-apply plugin: 'application'
-apply plugin: 'maven'
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-mainClassName = "com.athaydes.logfx.LogFX"
+mainClassName = "com.athaydes.logfx/com.athaydes.logfx.LogFX"
 
 repositories {
     mavenLocal()
@@ -30,23 +27,97 @@ tasks.withType( JavaCompile ) {
     options.encoding = 'UTF-8'
 }
 
-final generatedJavaSources = "$buildDir/java-generated-sources"
+def libs = "${buildDir}/libs"
+def image = "${buildDir}/image"
+ext.splashImage = "${image}/bin/logfx-logo.png"
 
-sourceSets.main.java.srcDir generatedJavaSources
+task deps {
+    doLast {
+        copy {
+            from configurations.runtimeClasspath
+            into libs
+        }
+    }
+}
+
+task copyShellScriptToImage( type: Copy ) {
+    from "src/main/sh/logfx${Os.isFamily( Os.FAMILY_WINDOWS ) ? '.bat' : ''}"
+    into "$image/bin"
+}
+
+task jlink( type: Exec ) {
+    dependsOn jar, deps
+    finalizedBy copyShellScriptToImage, project(':splash-maker').tasks.withType( JavaExec )
+    inputs.files( sourceSets*.allSource )
+    outputs.dir( image )
+    def options = [
+            '--module-path', libs,
+            '--vm=server', // options: client|server|minimal|all
+            '--add-modules', 'java.base,java.desktop,javafx.controls,jdk.unsupported,jdk.crypto.ec,org.slf4j,com.athaydes.logfx',
+            '--output', image,
+            '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages' ]
+    def jlink = System.getProperty( 'java.home' ) + '/bin/jlink'
+    commandLine( [ jlink ] + options )
+    doFirst { new File( image ).deleteDir() }
+}
+
+task packageImage( type: Zip ) {
+    outputs.upToDateWhen { false }
+    dependsOn jlink
+    from image
+    into "logfx"
+    include '**/*'
+    archiveName "logfx-${project.version}.zip"
+    destinationDir buildDir
+}
+
+task jpackage( type: Exec ) {
+    dependsOn jlink
+    def osOptions = Os.isFamily( Os.FAMILY_WINDOWS )
+            ? [ '--win-per-user-install',
+                '--win-dir-chooser',
+                '--win-menu',
+                '--win-shortcut',
+                '--icon', 'src/main/resources/com/athaydes/logfx/images/favicon-small.png' ]
+            : Os.isFamily( Os.FAMILY_MAC )
+            ? [
+                '--icon', 'src/main/resources/com/athaydes/logfx/images/favicon-small.png' ]
+            : [ '--linux-menu-group', 'programming',
+                '--linux-deb-maintainer', 'renato@athaydes.com',
+                '--linux-rpm-license-type', 'GPLv3',
+                '--linux-shortcut' ]
+    def options = osOptions + [
+            '--name', 'logfx',
+            '--app-image', image,
+            '--app-version', project.version,
+            '--copyright', 'Copyright 2017-2020 Renato Athaydes',
+            '--description', project.description,
+            '--type', 'deb',
+            '--vendor', 'Renato Athades',
+            '--license-file', 'LICENSE',
+            '--dest', buildDir ]
+    def jpackage = System.getProperty( 'java.home' ) + '/bin/jpackage'
+    commandLine( [ jpackage ] + options )
+}
+
+// waiting for bug fix: https://github.com/java9-modularity/gradle-modules-plugin/issues/111
+//final generatedJavaSources = "$buildDir/java-generated-sources"
+
+//sourceSets.main.java.srcDir generatedJavaSources
 
 dependencies {
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.12'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.8.0-beta4'
 
-    testCompile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.4'
-    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4', {
+    testImplementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.5.10'
+    testImplementation group: 'org.spockframework', name: 'spock-core', version: '1.3-groovy-2.5', {
         transitive = false
     }
-    testCompile group: 'com.athaydes', name: 'spock-reports', version: '1.3.2', {
+    testImplementation group: 'com.athaydes', name: 'spock-reports', version: '1.7.1', {
         transitive = false
     }
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'cglib', name: 'cglib-nodep', version: '3.2.5'
-    testCompile group: 'com.google.code.tempus-fugit', name: 'tempus-fugit', version: '1.1'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'cglib', name: 'cglib-nodep', version: '3.3.0'
+    testImplementation group: 'com.google.code.tempus-fugit', name: 'tempus-fugit', version: '1.1'
 }
 
 test {
@@ -59,7 +130,8 @@ task generateJavaSources(
         description: 'Generates Java sources based on the java-templates directory' ) {
     def properties = [ logfxVersion: version ]
     def templates = fileTree( dir: 'src/main/java-templates' )
-    def destination = file( generatedJavaSources )
+//    def destination = file( generatedJavaSources )
+    def destination = file( 'src/main/java' )
 
     doLast {
         templates.visit { item ->
@@ -81,14 +153,14 @@ compileJava.dependsOn generateJavaSources
 task fatJar( type: Jar ) {
     manifest {
         attributes 'Implementation-Title': 'LogFX',
-                'Implementation-Version': version,
+                'Implementation-Version': project.version,
                 'Implementation-Vendor': 'Renato Athaydes',
-                'Main-Class': mainClassName
+                'Main-Class': 'com.athaydes.logfx.LogFX'
     }
 
     classifier "all"
     from {
-        configurations.runtime.collect {
+        configurations.runtimeClasspath.collect {
             if ( it.isDirectory() ) return it
             zipTree( it ).matching {
                 // Licenses are acknowledged in our own license file
@@ -96,6 +168,8 @@ task fatJar( type: Jar ) {
             }
         }
     }
+    // include META-INF/services for logging to work in non-modular setup
+    from file('splash-maker/src/main/resources')
     with jar
 }
 
@@ -148,8 +222,6 @@ configure( install.repositories.mavenInstaller ) {
         }
     }
 }
-
-apply plugin: 'com.jfrog.bintray'
 
 bintray {
     user = project.hasProperty( "bintrayUserName" ) ? bintrayUserName : null
